fix broken layout in narrow screens

--- a/themes/reaktor23/static/css/style.css
+++ b/themes/reaktor23/static/css/style.css
@@ -118,6 +118,7 @@ p > code {
     margin-top: 28px;
     text-align: right;
     width: 7rem;
+    min-width: 7rem;
 }
 
 .talk-timeline div.timeline {
